[gd_scene load_steps=2 format=3 uid="uid://brlcje3brvxu4"]

[ext_resource type="Script" uid="uid://ddd0cs83pj1ae" path="res://Scripts/recipe.gd" id="1_7ps08"]

[node name="Recipe" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7ps08")

[node name="Slot1" type="Sprite2D" parent="."]
position = Vector2(-250, 0)

[node name="Slot2" type="Sprite2D" parent="."]
position = Vector2(-150, 0)

[node name="Slot3" type="Sprite2D" parent="."]
position = Vector2(-50, 0)

[node name="Slot4" type="Sprite2D" parent="."]
position = Vector2(50, 0)

[node name="Slot5" type="Sprite2D" parent="."]
position = Vector2(150, 0)

[node name="Slot6" type="Sprite2D" parent="."]
position = Vector2(251, 0)
